<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enternumber" />

    <EditText
        android:id="@+id/etnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <Button
        android:id="@+id/btnCounterIncreament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnincreament" />

    <Button
        android:id="@+id/btnCounterdecreament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btndecreament" />

</LinearLayout>
